@@ -19,7 +19,6 @@
 package org.apache.pinot.client;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
 import java.lang.reflect.Method;
 import java.util.List;
 import java.util.Map;
@@ -54,7 +53,7 @@ public class ConnectionFactoryTest {
 
       @Override
       public List<String> getBrokers() {
-        return ImmutableList.of(givenBrokerInfo);
+        return List.of(givenBrokerInfo);
       }
     });
 
@@ -66,7 +65,7 @@ public class ConnectionFactoryTest {
             pinotClientTransport);
 
     // Check that the broker list has the right length and has the same servers
-    Assert.assertEquals(connection.getBrokerList(), ImmutableList.of(givenBrokerInfo));
+    Assert.assertEquals(connection.getBrokerList(), List.of(givenBrokerInfo));
   }
 
   @Test
@@ -79,7 +78,7 @@ public class ConnectionFactoryTest {
     Connection connection = ConnectionFactory.fromProperties(properties);
 
     // Check that the broker list has the right length and has the same servers
-    Assert.assertEquals(connection.getBrokerList(), ImmutableList.of("127.0.0.1:1234", "localhost:2345"));
+    Assert.assertEquals(connection.getBrokerList(), List.of("127.0.0.1:1234", "localhost:2345"));
   }
 
   @Test
@@ -90,14 +89,14 @@ public class ConnectionFactoryTest {
     Connection connection = ConnectionFactory.fromHostList(broker1, broker2);
 
     // Check that the broker list has the right length and has the same servers
-    List<String> brokers = ImmutableList.of(broker1, broker2);
+    List<String> brokers = List.of(broker1, broker2);
     Assert.assertEquals(connection.getBrokerList(), brokers);
   }
 
   @Test
   public void testBrokerListWithHeaders() {
     // Create the connection
-    List<String> brokers = ImmutableList.of("127.0.0.1:1234", "localhost:2345");
+    List<String> brokers = List.of("127.0.0.1:1234", "localhost:2345");
 
     Map<String, String> headers = Map.of("Caller", "curl");
 
@@ -170,7 +169,7 @@ public class ConnectionFactoryTest {
   @Test
   public void testConnectionCursorFunctionalityWithJsonTransport() {
     // Test that connections created with JsonAsyncHttpPinotClientTransport support cursor operations
-    List<String> brokers = ImmutableList.of("127.0.0.1:1234");
+    List<String> brokers = List.of("127.0.0.1:1234");
     JsonAsyncHttpPinotClientTransportFactory factory = new JsonAsyncHttpPinotClientTransportFactory();
     Connection connection = ConnectionFactory.fromHostList(brokers, factory.buildTransport());
 
@@ -182,7 +181,7 @@ public class ConnectionFactoryTest {
   @Test
   public void testOpenCursorWithUnsupportedTransport() {
     // Test that openCursor throws UnsupportedOperationException with non-JsonAsyncHttpPinotClientTransport
-    List<String> brokers = ImmutableList.of("127.0.0.1:1234");
+    List<String> brokers = List.of("127.0.0.1:1234");
     PinotClientTransport<?> mockTransport = Mockito.mock(PinotClientTransport.class);
     Connection connection = new Connection(brokers, mockTransport);
 
